--- a/main.html
+++ b/main.html
@@ -4,13 +4,24 @@
 
 <head>
 	<link rel="stylesheet" href="./styles.css">
+	<style>
+		*{
+			background-image:"https://th-i.thgim.com/public/education/x0cwh3/article34059082.ece/alternates/FREE_1200/15EPBSSalil-Sahadevan";
+		}
+		h1{
+			/* color:white; */
+			text-align:center;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h1>
+	Welcome to the new Era of Artificial intelligence
+</h1>
 </body>
 
 </html>
